// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render InputSelect with normal option type, no sorting 1`] = `
<div>
  <div
    class="survey-question__input-select-container"
  >
    <div
      class="react-select-container css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      >
        <span
          id="aria-selection"
        />
        <span
          id="aria-focused"
        />
        <span
          id="aria-results"
        >
          4 results available.
        </span>
        <span
          id="aria-guidance"
        >
          Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
        </span>
      </span>
      <div
        class="react-select__control react-select__control--is-focused react-select__control--menu-is-open css-t3ipsp-control"
      >
        <div
          class="react-select__value-container css-1fdsijx-ValueContainer"
        >
          <div
            class="react-select__placeholder css-1jqq78o-placeholder"
            id="react-select-2-placeholder"
          />
          <div
            class="react-select__input-container css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-activedescendant="react-select-2-option-0"
              aria-autocomplete="list"
              aria-controls="react-select-2-listbox"
              aria-describedby="react-select-2-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              aria-labelledby="test_label"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class="react-select__input"
              id="test"
              role="combobox"
              spellcheck="false"
              style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class="react-select__indicator-separator css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class="react-select__indicator react-select__dropdown-indicator css-15lsz6c-indicatorContainer"
          >
            <svg
              aria-hidden="true"
              class="css-tj5bde-Svg"
              focusable="false"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="react-select__menu css-1nmdiq5-menu"
      >
        <div
          aria-multiselectable="false"
          class="react-select__menu-list css-1n6sfyn-MenuList"
          id="react-select-2-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="false"
            class="react-select__option react-select__option--is-focused css-d7l1ni-option"
            id="react-select-2-option-0"
            role="option"
            tabindex="-1"
          >
            Label For Feature 1
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="react-select__option css-10wo9uf-option"
            id="react-select-2-option-1"
            role="option"
            tabindex="-1"
          >
            Label For Feature 2
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="react-select__option css-10wo9uf-option"
            id="react-select-2-option-2"
            role="option"
            tabindex="-1"
          >
            Label For Feature 3
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="react-select__option css-10wo9uf-option"
            id="react-select-2-option-3"
            role="option"
            tabindex="-1"
          >
            Label For Feature 4
          </div>
        </div>
      </div>
      <input
        name="survey-question__input-select-feature-foo.test"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render InputSelect with normal option type, proximity sorting 1`] = `
<div>
  <div
    class="survey-question__input-select-container"
  >
    <div
      class="react-select-container css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      >
        <span
          id="aria-selection"
        />
        <span
          id="aria-focused"
        />
        <span
          id="aria-results"
        >
          4 results available.
        </span>
        <span
          id="aria-guidance"
        >
          Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
        </span>
      </span>
      <div
        class="react-select__control react-select__control--is-focused react-select__control--menu-is-open css-t3ipsp-control"
      >
        <div
          class="react-select__value-container css-1fdsijx-ValueContainer"
        >
          <div
            class="react-select__placeholder css-1jqq78o-placeholder"
            id="react-select-7-placeholder"
          />
          <div
            class="react-select__input-container css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-activedescendant="react-select-7-option-0"
              aria-autocomplete="list"
              aria-controls="react-select-7-listbox"
              aria-describedby="react-select-7-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              aria-labelledby="test_label"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class="react-select__input"
              id="test"
              role="combobox"
              spellcheck="false"
              style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class="react-select__indicator-separator css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class="react-select__indicator react-select__dropdown-indicator css-15lsz6c-indicatorContainer"
          >
            <svg
              aria-hidden="true"
              class="css-tj5bde-Svg"
              focusable="false"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="react-select__menu css-1nmdiq5-menu"
      >
        <div
          aria-multiselectable="false"
          class="react-select__menu-list css-1n6sfyn-MenuList"
          id="react-select-7-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="false"
            class="react-select__option react-select__option--is-focused css-d7l1ni-option"
            id="react-select-7-option-0"
            role="option"
            tabindex="-1"
          >
            Label For Feature 4
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="react-select__option css-10wo9uf-option"
            id="react-select-7-option-1"
            role="option"
            tabindex="-1"
          >
            Label For Feature 2
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="react-select__option css-10wo9uf-option"
            id="react-select-7-option-2"
            role="option"
            tabindex="-1"
          >
            Label For Feature 1
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="react-select__option css-10wo9uf-option"
            id="react-select-7-option-3"
            role="option"
            tabindex="-1"
          >
            Label For Feature 3
          </div>
        </div>
      </div>
      <input
        name="survey-question__input-select-feature-foo.test"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;
